--- a/main.css
+++ b/main.css
@@ -18,6 +18,12 @@ h1 {
 
 h2 {
     font-size: 2rem;
+    letter-spacing: .5rem;
+}
+
+.star {
+    color: rgb(243, 236, 229) !important;
+    opacity: 0;
 }
 
 .head1,
@@ -25,21 +31,52 @@ h2 {
     padding: 1rem;
 }
 
-*{
+/* #blog {
+    display: none;
+} */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  section{
+}
+
+section {
     height: 100vh;
     background: rgb(243, 236, 229);
-    display:flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-  }
-  
-  svg{
+}
+
+svg {
     cursor: pointer;
-  }
+}
+
+.star {
+    border-radius: 100%;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 15px;
+    padding: 6px 12px;
+    text-decoration: none;
+    text-shadow: 0px 0px 18px #ffffff;
+    /* color: rgb(243, 236, 229) !important; */
+    color: white;
+    opacity: 0;
+}
+
+.star:hover {
+    background-color: #fcffb2;
+}
+
+.star:active {
+    position: relative;
+    top: 1px;
+}
+
+#star1 {
+    position: absolute;
+    top: 5rem;
+    left: 20rem;
+}
